--- a/dagutils/dag/sdss/coadd/dag/templates/preJob.condor.template
+++ b/dagutils/dag/sdss/coadd/dag/templates/preJob.condor.template
@@ -2,7 +2,7 @@ universe=vanilla
 
 # executable=/bin/hostname
 # arguments=-f
-executable=$SCRIPT
+executable=$ORCA_SCRIPT
 
 transfer_executable=true
 #
@@ -19,7 +19,7 @@ Requirements = (FileSystemDomain != "") && (Arch != "") && (OpSys != "") && (Dis
 should_transfer_files = YES
 when_to_transfer_output = ON_EXIT
 
-remote_initialdir=$DEFAULTROOT
+remote_initialdir=$ORCA_DEFAULTROOT
 # remote_initialdir=/scratch/00342/ux453102/datarel-runs/pt12prod_im3001/work
 # Requirements = (FileSystemDomain != "dummy") && (Arch != "dummy") && (OpSys != "dummy") && (Disk != -1) && (Memory != -1)
 queue
