--- a/dagutils/dag/sdss/pcoadd/dag/templates/worker.sh.template
+++ b/dagutils/dag/sdss/pcoadd/dag/templates/worker.sh.template
@@ -2,17 +2,16 @@
 
 export HERE=$PWD
 
-export HOME=/home/ux453102
+export HOME=$USERHOME
 export SHELL=/bin/sh
-export USER=ux453102
-source /etc/bashrc
+export USER=$USERNAME
 
-# processSdssCcd reference run
-referenceRun="s2012prod_sd0202"
+source /etc/bashrc
 
 module add gnu/4.6.1
 
-echo ${HERE}
+export LSST_HOME=$LSST_HOME
+export EUPS_PATH=$EUPS_PATH
 
 /bin/hostname -f 
 shost=`/bin/hostname -s`
@@ -41,15 +40,14 @@ done
 
 runid=$4 
 workerid=$5 
-rundir=${HERE}/$runid
+rundir=${HERE}/$ORCA_RUNID
 cd ${rundir}
 
 cslot=${_CONDOR_SLOT}
 
 mkdir -p logs/$shost/$cslot
 
-# source ./env.sh
-source ${HERE}/${referenceRun}/env.sh
+source ${HERE}/$REFRUN/env.sh
 
 temp=""
 
@@ -82,12 +80,7 @@ echo ${modstring}
 time1=$(date -d "`date`" "+%s")
 
 
-# echo "${CTRL_ORCA_DIR}/bin/wrapperProcessCcdSdss.py ${runid} ${workerid} sdss ${rundir}/runs ${filter_tract_patch_cmd} --output ${rundir}/output  > ${rundir}/logs/$shost/$cslot/S2012Pipe-${modstring}.log"
-
-
 echo "${PIPE_TASKS_DIR}/bin/processCoadd.py sdss myCoaddDir  ${filter_tract_patch_cmd} --output ${rundir} --config coaddName=goodSeeing > ${rundir}/logs/$shost/$cslot/processCoadd-${modstring}.log"
-
-# ${CTRL_ORCA_DIR}/bin/wrapperProcessCcdSdss.py ${runid} ${workerid} sdss ${rundir}/runs ${filter_tract_patch_cmd} --output ${rundir}/output --config daf.persistence.butler.verbosity=10 >  ${rundir}/logs/$shost/$cslot/S2012Pipe-${modstring}.log  2>&1
 
 ${PIPE_TASKS_DIR}/bin/processCoadd.py sdss myCoaddDir  ${filter_tract_patch_cmd} --output ${rundir} --config coaddName=goodSeeing > ${rundir}/logs/$shost/$cslot/processCoadd-${modstring}.log 2>&1
 
@@ -95,7 +88,7 @@ time2=$(date -d "`date`" "+%s")
 
 let time3=$time2-$time1
 
-echo "===================== After processCoadd "
+echo "===== After processCoadd "
 
 echo STAMP2 $time2
 echo STAMP1 $time1
