--- a/dagutils/dag/sdss/ccd/dag/templates/preJob.sh.template
+++ b/dagutils/dag/sdss/ccd/dag/templates/preJob.sh.template
@@ -51,6 +51,6 @@ eups_setup astrometry_net_data   sdss-2012-05-01-0 > tmp.sh
 # cd $RUNID
 # . ./tmp.sh; cat tmp.sh >> env.sh
 
-eups list > eups.list 
+eups list --setup > eups.list 
 
 
